<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ejerciciofinal.RegisterFragment">


        <TextView
            android:id="@+id/tvEditProfile"
            android:text="@string/label_register_title"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:textColor="@color/text_color_title"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/cvProfile"
            android:layout_below="@id/tvEditProfile"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:cardCornerRadius="100dp">

            <ImageView
                android:id="@+id/ivProfile"
                android:src="@drawable/pikachu"
                android:layout_below="@id/tvEditProfile"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvName"
            android:text="@string/label_name"
            android:textStyle="bold"
            android:textColor="@color/text_color_title"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:gravity="center_horizontal"
            android:layout_below="@id/cvProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etName"
            android:hint="@string/label_enter_your_name"
            android:paddingStart="10dp"
            android:textColorHint="@color/text_color_hint"
            android:textColor="@android:color/white"
            android:textStyle="italic"
            android:layout_below="@id/tvName"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvSurname"
            android:text="@string/label_surname"
            android:textStyle="bold"
            android:textColor="@color/text_color_title"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:gravity="center_horizontal"
            android:layout_below="@id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etSurname"
            android:hint="@string/label_enter_your_surname"
            android:paddingStart="10dp"
            android:textColorHint="@color/text_color_hint"
            android:textColor="@android:color/white"
            android:textStyle="italic"
            android:layout_below="@id/tvSurname"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvEmail"
            android:text="@string/label_email"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:textColor="@color/text_color_title"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_below="@id/etSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etEmail"
            android:hint="@string/label_enter_your_email"
            android:paddingStart="10dp"
            android:textColorHint="@color/text_color_hint"
            android:textStyle="italic"
            android:textColor="@android:color/white"
            android:layout_below="@id/tvEmail"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvPassword"
            android:text="@string/label_password"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:textColor="@color/text_color_title"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_below="@id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etPassword"
            android:hint="@string/label_enter_your_password"
            android:paddingStart="10dp"
            android:textColorHint="@color/text_color_hint"
            android:textStyle="italic"
            android:textColor="@android:color/white"
            android:layout_below="@id/tvPassword"
            android:password="true"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_below="@id/etPassword"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rbMan"
                android:text="@string/label_man"
                android:textColor="@color/text_color"
                android:paddingStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/rbWoman"
                android:text="@string/label_woman"
                android:textColor="@color/text_color"
                android:paddingStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/rbNoEspecify"
                android:text="@string/label_no_especify"
                android:enabled="true"
                android:textColor="@color/text_color"
                android:checked="true"
                android:buttonTint="@android:color/holo_blue_bright"
                android:paddingStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>
        <CheckBox
            android:id="@+id/cbTerms"
            android:layout_below="@id/rgGender"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textColor="@android:color/holo_blue_bright"
            android:text="@string/label_accept_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnSave"
            android:text="@string/label_save"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_below="@id/cbTerms"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </RelativeLayout>
</ScrollView>